# Pixelle-MCP

./: .gitignore  LICENSE  NOTICE  README.md  README_CN.md  README_EN.md  config.yml.example  docker-compose.yml  run.bat  run.sh  start.sh
mcp-base/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.minio.yml  main.py  pyproject.toml  yml_env_loader.py
mcp-base/config/: settings.py
mcp-base/services/: file_service.py
mcp-base/storage/: __init__.py  base.py  local_storage.py  minio_storage.py
mcp-client/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  auth.py  chainlit.md  chat_handler.py  chat_settings.py  core.py  docker-compose.yml  file_uploader.py  llm_util.py  main.py  mcp_tool_handler.py  message_converter.py  os_util.py  prompt.py  pyproject.toml  random_util.py  requirements.txt  start.sh  starters.py  time_util.py  tool_converter.py  update_starters.py  update_starters.sh  upload_util.py
mcp-client/.chainlit/: config.toml
mcp-client/auth/: auth.py
mcp-client/chat/: chat_handler.py  chat_settings.py  starters.py
mcp-client/converters/: message_converter.py
mcp-client/core/: core.py  prompt.py
mcp-client/public/: app.css  app.js
mcp-client/starters/: 001_功能介绍.json  002_本地ComfyUI推理.json  003_FLUX_Kontext_Pro图片编辑.json  003_图片转视频.json  004_TTS文本转音频.json  004_更改图片文字.json  005_同时更改内容和文字.json  005_多模态复杂链路生成.json  006_移除图片中的人物.json  007_局部替换图片内容.json  008_GPT4图片编辑.json  009_老照片修复.json  010_图片转视频.json  011_TTS文本转音频.json  012_多模态复杂链路生成.json
mcp-client/utils/: file_uploader.py  llm_util.py  os_util.py
mcp-server/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  core.py  docker-compose.yml  main.py  pyproject.toml  start.sh  yml_env_loader.py
mcp-server/comfyui/: base_executor.py  facade.py  http_executor.py  models.py  websocket_executor.py  workflow_parser.py
mcp-server/manager/: workflow_manager.py
mcp-server/resources/: usage.py
mcp-server/tools/: __init__.py  comfyui.py  edge_tts.py  file_uploader_tool.py  gpt4_image.py  i2i_by_flux_kontext_pro.py  i2i_by_gpt4.py  i2t_by_gpt.py  i2t_by_local_florence.py  i2v_by_kling_start_frame.py  i2v_by_local_wan_fusionx.py  i_crop.py  i_merge.py  image_handle.py  pixelle_base_service.py  s2t_by_local_whisper.py  s_generate_audio_by_prompt.py  t2i_by_local_flux.py  t2s_by_edge_tts.py  t2s_by_index_tts.py  upload_test.py  (+5 more)
(+50 files in other folders)
