[project]
name = "pixelle-mcp-base"
version = "0.1.0"
description = "Pixelle MCP Base Service - 提供文件存储和基础服务能力"
requires-python = ">=3.11"
authors = [
    {name = "Pixelle Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "minio>=7.2.0",
    "pillow>=10.1.0",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
] 
